--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.shop</groupId>
-    <artifactId>online-shop</artifactId>
+    <artifactId>online-shop-project</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
