--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,6 @@ Thumbs.db
 
 # Default ignored files
 /shelf/
-/workspace.xml
+/.idea/workspace.xml
 # Environment-dependent path to Maven home directory
 /mavenHomeManager.xml
